--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
          </article>
      </main>
      <footer>
-         <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/user/cursosemvideo" target="_blank">CursoemVideo</a>.</p>
+         <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Ana do Amor</a> para o <a href="https://www.youtube.com/user/cursosemvideo" target="_blank">CursoemVideo</a>.</p>
      </footer>
 </body>
 </html>
